refactor(powerline): 优化代码结构和性能
- 简化AutomaticTowerSelector中的导入语句并使用更现代的排序方法
- 从PowerLineBuildPanel中移除未使用的代码分支和空逻辑
- 删除PowerLinePluginState中不再需要的方法
- 清理PowerLineStyleCardRenderer中的废弃常量、方法和参数
- 更新PowerLineValidationCanvasRenderer中的循环语法提高可读性
- 移除UserPoleDesignTemplateCatalog中的重复方法
- 在测试